--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,20 +1,24 @@
 name: Release
 
 on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
   release:
     types: [ published ]
-  workflow_dispatch:
+  workflow_dispatch: # Allows manual trigger
 
 permissions:
   contents: write
-  id-token: write
-  attestations: write
+  actions: write
 
 jobs:
   release:
     runs-on: windows-2022
     steps:
     - uses: actions/checkout@v4
+    
     - name: Setup dotnet
       uses: actions/setup-dotnet@v4
       with:
@@ -24,34 +28,32 @@ jobs:
       run: |
         dotnet publish app/GHelper.sln --configuration Release --runtime win-x64 -p:PublishSingleFile=true --no-self-contained
 
-    - name: Upload unsigned EXE
-      id: upload-unsigned
+    # 1. Zip the file directly (No signing needed for personal use)
+    - name: Create ZIP
+      run: |
+        $source = "app/bin/x64/Release/net8.0-windows/win-x64/publish/GHelper.exe"
+        powershell Compress-Archive $source GHelper.zip
+
+    # 2. ALWAYS upload to "Artifacts" (Works for Manual Runs & Releases)
+    - name: Upload Build Artifact
       uses: actions/upload-artifact@v4
       with:
-        path: app/bin/x64/Release/net8.0-windows/win-x64/publish/GHelper.exe
+        name: GHelper-Build
+        path: |
+          app/bin/x64/Release/net8.0-windows/win-x64/publish/GHelper.exe
 
-    - id: sign-exe
-      uses: signpath/github-action-submit-signing-request@v1.1
-      with:
-        api-token: ${{ secrets.SIGNPATH_API_TOKEN }}
-        organization-id: ${{ secrets.SIGNPATH_ORG_ID }}
-        project-slug: ${{ secrets.SIGNPATH_PROJECT }}
-        signing-policy-slug: ${{ secrets.SIGNPATH_POLICY }}
-        github-artifact-id: ${{ steps.upload-unsigned.outputs.artifact-id }}
-        wait-for-completion: true
-        output-artifact-directory: './signed'
-
-    - name: Create ZIP from signed EXE
-      run: powershell Compress-Archive ./signed/GHelper.exe ./signed/GHelper.zip
-
-    - name: Upload signed EXE and ZIP
+    # 3. ONLY upload to "Releases" if this was actually triggered by a Release
+    - name: Upload to Release
+      if: github.event_name == 'release'
       env:
         GH_TOKEN: ${{ github.token }}
       run: |
-        gh release upload "${{ github.event.release.tag_name }}" ./signed/GHelper.exe ./signed/GHelper.zip --clobber
-    - name: Generate SLSA build provenance attestation
-      uses: actions/attest-build-provenance@v2
+        gh release upload "${{ github.event.release.tag_name }}" app/bin/x64/Release/net8.0-windows/win-x64/publish/GHelper.exe GHelper.zip --clobber
+
+    - name: Delete older runs
+      uses: Mattraks/delete-workflow-runs@v2
       with:
-        subject-path: |
-          ./signed/GHelper.exe
-          ./signed/GHelper.zip
+        token: ${{ github.token }}
+        repository: ${{ github.repository }}
+        retain_days: 0
+        keep_minimum_runs: 2
